- Fixed scrollbars on lower res screens - Fixed strange behaviour of cardboard button to hover on top of the searchbar when on lower res screen.

--- a/svySampleCrm/medias/sampleCrm.css
+++ b/svySampleCrm/medias/sampleCrm.css
@@ -75,6 +75,9 @@
 	padding-left: 12.5%;
 }
 
+.form-contact-list {
+	min-width: 320px;	
+}
 /* Elements */
 .fa-icon-orange {
 	color: #EB7932;
